# the_golden_eye

./: .env.example  .gitignore  .prettierignore  AGENTS.md  BUGS.md  CONTRIBUTING.md  README.md  TODO.md  justfile  package-lock.json  package.json  tsconfig.json  viewer.html
obs2/: .gitignore  CMakeLists.txt  Info.plist.in  README.md  bmp.c  bmp.h  core.c  cv_wrapper.cpp  cv_wrapper.h  dev_reload.c  dev_reload.h  dynlib.h  http.c  http.h  logger.c  logger.h  obs_bridge.c  obs_bridge.h  plugin.c  single-segment-categories.json  stream_notifier.c  stream_notifier.h  test_match.cpp
obs2/browser/: .prettierignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
obs2/browser/.storybook/: manager.ts  preview.css  preview.ts
obs2/browser/src/: app.d.ts  app.html
obs2/browser/src/lib/: InputLang.svelte  KiaDeathOverlay.svelte  MetaPills.svelte  MonitorSession.svelte  NotificationFlags.svelte  OptionsGeneral.svelte  OptionsNotifications.svelte  OptionsRecording.svelte  OptionsYouTube.svelte  RunDetailDialog.svelte  RunFilters.svelte  RunList.svelte  RunModeChooser.svelte  RunsFolderChooser.svelte  SingleSegmentSplits.svelte  StopMonitorDialog.svelte  YouTubeConnectButton.svelte  api.ts  appSocket.svelte.spec.ts  appSocket.svelte.ts  index.ts  metaPills.ts  monitor.svelte.spec.ts  monitor.svelte.ts  notifications.svelte.spec.ts  notifications.svelte.ts  optionsView.ts  replayBuffer.svelte.ts  runsView.spec.ts  runsView.ts  settings.svelte.ts  singleSegment.ts  sources.svelte.ts  updates.svelte.spec.ts  updates.svelte.ts  youtube.svelte.spec.ts  youtube.svelte.ts  youtubeMetadata.spec.ts  youtubeMetadata.ts
obs2/browser/src/lib/components/: ActionMenu.svelte  ActionMenu.svelte.spec.ts  AppHeader.svelte  AppHeader.svelte.spec.ts  FailedRunReviewDialog.svelte  FailedRunReviewDialog.svelte.spec.ts  KiaDeathOverlay.svelte  ManualUpdateDialog.svelte  MetaPills.svelte  ModalDialog.svelte  MonitorDebug.svelte  MonitorMissionGlass.svelte  MonitorSignalBand.svelte  MonitorView.svelte  MonitorView.svelte.spec.ts  NotificationFlags.svelte  OptionsGeneral.svelte  OptionsNotifications.svelte  OptionsRecording.svelte  OptionsYouTube.svelte  RecentRuns.svelte  RecentRuns.svelte.spec.ts  ReplayBufferStopDialog.svelte  ResetSettingsDialog.svelte  RunCatalogSyncDialog.svelte  RunCatalogSyncDialog.svelte.spec.ts  RunDeleteDialog.svelte  RunDetailDialog.svelte  RunFilters.svelte  RunList.svelte  RunList.svelte.spec.ts  RunListItem.svelte  RunListItem.svelte.spec.ts  RunSortMenu.svelte  RunYouTubeSection.svelte  RunsFolderChooser.svelte  SectionTitle.svelte  Select.svelte  SourcePreview.svelte  WelcomeDialog.svelte  (+2 more)
obs2/browser/src/lib/stores/: appSocket.svelte.ts  (+17 more)
obs2/browser/src/routes/: +layout.svelte  +page.svelte  layout.css  page.svelte.spec.ts
obs2/browser/src/stories/: FailedRunReview.stories.svelte  Header.stories.svelte  KiaAnimation.stories.svelte  KiaAnimationStory.svelte  ModalStory.svelte  Modals.stories.svelte  Monitor.stories.svelte  MonitorDebug.stories.svelte  MonitorDebugTransitions.stories.svelte  MonitorMissionGlass.stories.svelte  MonitorMissionGlassTransitions.stories.svelte  MonitorSignalBand.stories.svelte  MonitorSignalBandTransitions.stories.svelte  MonitorTransitionStory.svelte  MonitorTransitions.stories.svelte  NotificationStory.svelte  Notifications.stories.svelte  RunDetailStory.svelte  RunFilters.stories.svelte  RunFiltersStory.svelte  RunListItem.stories.svelte  RunListItemStory.svelte  RunListStory.svelte  RunModal.stories.svelte  RunYouTubeStory.svelte  RunsList.stories.svelte  SectionTitle.stories.svelte  SectionTitleStory.svelte  SourceSelectionStory.svelte  Sources.stories.svelte  YouTubeOptions.stories.svelte  YouTubeOptionsStory.svelte  YouTubeRuns.stories.svelte  fixtures.ts  monitorStoryFixtures.ts
obs2/cmake/: FFmpegStatic.cmake  Frontend.cmake  OBSLibs.cmake  OpenCVStatic.cmake  Package.cmake  RustLib.cmake  Targets.cmake  check-file-exists.cmake  clean-package-dist.cmake  golden_core.linux.version  golden_core.macos.exports  make-import-lib.ps1  strip-if-enabled.cmake
obs2/compat/: threads.h
obs2/core/: core.c  ge_log.c  obs_bridge.c  obs_bridge.h
obs2/locale/: en-US.ini
obs2/rust/: Cargo.toml  build.rs  rustfmt.toml
obs2/rust/src/: browser.rs  browser_dock.rs  browser_dock_test.rs  browser_launch.rs  config.rs  cv.rs  cv_annotate.rs  cv_test.rs  ffi.rs  ffmpeg.rs  ffmpeg_test.rs  ge.rs  ge_test.rs  lib.rs  lib_test.rs  logging.rs  obs_ffi.rs  obs_stub.rs  recording.rs  recording_test.rs  settings.rs  settings_test.rs  single_segment.rs  stream_notifier.rs  stream_notifier_test.rs  template_tokens.rs  timer.rs  update_apply.rs  update_apply_test.rs  updates.rs  updates_test.rs  youtube.rs  youtube_types.rs
obs2/rust/src/config/: browser.rs  browser_dock.rs  cv.rs  flatpak.rs  logging.rs  matcher.rs  mod.rs  monitor.rs  paths.rs  server.rs  shared.rs  updates.rs  youtube.rs
obs2/rust/src/db/: clips.rs  meta.rs  mod.rs  run_catalog.rs  run_catalog_test.rs  runs.rs
obs2/rust/src/http/: mod.rs  state.rs  state_test.rs
obs2/rust/src/models/: clip_metadata.rs  mod.rs
obs2/rust/templates/: oauth_callback.html
obs2/rust/tests/: completed_clip.rs  failed_clip.rs  frontend_ready.rs  match_upload.rs  monitor_restart.rs  monitor_snapshot.rs  reload_notice.rs  rom_language_switching.rs  run_catalog_migration.rs  stats_time_accuracy.rs  stream_notifications.rs  update_apply.rs  update_checking.rs  user_replay_save.rs  youtube_integration.rs
obs2/rust/tests/support/: harness.rs  mod.rs  test_obs.rs
obs2/scripts/: check_package_contract.py  dev.kdl  dev.py  ffmpeg-static.sh  github-rust-test-summary.mjs  macos_codesign.sh  obs-headers.sh  opencv-static.sh  simulate_update.py
obs2/shim/: dynlib.c  plugin.c  reload.c  reload.h  reload_platform.h  reload_unix.c  reload_win32.c  version.c  version.h
obs2/shim/tests/: CMakeLists.txt  fake_obs.c  fake_obs.h  fixture.c  fixture_common.h  test_dynlib.c  test_platform.c  test_plugin.c  test_reload.c  test_support.h
obs2/templates/: VERSION.in  browser-dev.html.in
(+131 files in other folders)
