[package]
name = "ge_rust"
version = "0.1.0"
build = "build.rs"
edition = "2024"
publish = false

[lib]
# Produce a C-compatible static archive that CMake can link into the plugin.
crate-type = ["staticlib", "rlib"]

# Standalone CLI for exercising the level matcher outside of OBS. Mirrors the
# C++ obs2/test_match.cpp: given an input image it prints the matched level
# information (mission/part/difficulty/times) to stdout.
[[bin]]
name = "test_match"
path = "src/bin/test_match.rs"

[[bin]]
name = "annotate_match"
path = "src/bin/annotate_match.rs"

[features]
# Enabled by the CMake build when BROWSER_DEV=ON. Turns on permissive CORS so
# the SPA served from the Vite dev server (a different origin) can call the API.
dev = []

[build-dependencies]
cbindgen = "0.29.3"


[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "ws"] }
base64 = "0.22.1"
bmp = "0.5.0"
# Statically linked against the vendored FFmpeg in obs2/vendor/ffmpeg-static
# (built by `just ffmpeg-static`). The `static` feature makes ffmpeg-sys-next
# probe pkg-config with --static; CMake points PKG_CONFIG_PATH at the vendored
# prefix so it resolves there rather than a system FFmpeg.
ffmpeg-next = { version = "8.1.0", default-features = false, features = ["static", "codec", "format", "software-resampling", "software-scaling"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
libc = "0.2.186"
# `clang-runtime` makes opencv's binding generator load libclang at runtime.
# ffmpeg-sys-next pulls in bindgen with the `runtime` feature, which unifies
# `clang-sys/runtime` on for the whole build; without matching it here, opencv's
# generator panics with "libclang shared library is not loaded on this thread".
opencv = { version = "0.98.2", features = ["clang-runtime"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "form", "native-tls", "charset", "http2", "system-proxy"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.6.11", features = ["trace", "util", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1.3"

[profile.dist]
inherits = "release"
# Reducing binary size. See: https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
